--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dev speaker | by Allan Julie</title>
+  <title>Command Voice | By Allan Julie</title>
 </head>
 <body>
-  <h1>Assistente pessoal</h1>
+  <h1>Command voice</h1>
   <button class="talk">Talk</button>
   <h3 class="content"></h3>
   <div class="conversation"></div>
 
-  <script src="/JS/script.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
