--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Command Voice | By Allan Julie</title>
-</head>
-<body>
-  <h1>Command voice</h1>
-  <button class="talk">Talk</button>
-  <h3 class="content"></h3>
-  <div class="conversation"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/src/styles/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/4bae6c4864.js"
+      crossorigin="anonymous"
+    ></script>
 
-  <script src="./index.js"></script>
-</body>
+    <title>Command Voice | By Allan Julie</title>
+  </head>
+  <body>
+    <nav class="header-title">
+      <h1 id="page title">Command voice</h1>
+    </nav>
+
+    <section class="conversation-elements">
+      <div class="wrapper">
+        <input
+          type="checkbox"
+          class="save-conversation checkbox"
+          id="check"
+          name="save-input"
+        />
+        <label for="check">Save conversation?</label>
+      </div>
+
+      <div class="tooltip-button">
+        <button class="talk" id="talk-btn" name="talk-btn">
+          <i class="fas fa-microphone-alt"></i>
+        </button>
+        <span class="tooltip-text">Click to talk</span>
+      </div>
+
+      <h3 class="content"></h3>
+      <div class="conversation"></div>
+    </section>
+
+    <script src="./index.js"></script>
+  </body>
 </html>
