--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,21 @@
     <title>Command Voice | By Allan Julie</title>
   </head>
   <body>
+    <div class="confirm-delete hidden">
+      <div class="card">
+        <h2>Excluir</h2>
+        <img
+          class="trash-can-img"
+          src="/src/assets/trash-can.png"
+          alt="Lixeira - excluir"
+        />
+        <p>Tem certeza que deseja excluir suas conversas?</p>
+        <ul>
+          <li><button class="delete">Excluir</button></li>
+          <li><button class="cancel">Cancelar</button></li>
+        </ul>
+      </div>
+    </div>
     <nav class="header-title">
       <div class="menu">
         <div></div>
@@ -31,7 +46,22 @@
       </div>
       <h1 id="page title">Command voice</h1>
     </nav>
-    <div class="menu-opened hidden"></div>
+    <div class="menu-opened hidden">
+      <h3>Command voice</h3>
+      <hr />
+      <div class="clean-storage">
+        <i class="fas fa-trash-alt"></i>
+        <p>Limpar conversa</p>
+      </div>
+      <div class="github">
+        <i class="fab fa-github"></i>
+        <a href="https://github.com/Allan28818/Command-voice">Github</a>
+      </div>
+      <div class="linkedin">
+        <i class="fab fa-linkedin"></i>
+        <a href="">Linkedin</a>
+      </div>
+    </div>
 
     <section class="conversation-elements">
       <div class="wrapper">
@@ -52,10 +82,10 @@
         <span class="tooltip-text">Click to talk</span>
       </div>
 
-      <h3 class="content"></h3>
       <div class="conversation"></div>
     </section>
 
+    <script src="./services/deleteConversation.js"></script>
     <script src="./controllers/animateHTML.js"></script>
     <script src="./index.js"></script>
   </body>
