--- a/src/index.html
+++ b/src/index.html
@@ -53,14 +53,21 @@
         <i class="fas fa-trash-alt"></i>
         <p>Limpar conversa</p>
       </div>
-      <div class="github">
-        <i class="fab fa-github"></i>
-        <a href="https://github.com/Allan28818/Command-voice">Github</a>
-      </div>
-      <div class="linkedin">
-        <i class="fab fa-linkedin"></i>
-        <a href="">Linkedin</a>
-      </div>
+      <a href="https://github.com/Allan28818/Command-voice" target="_blank">
+        <div class="github">
+          <i class="fab fa-github"></i>
+          <p>Github</p>
+        </div>
+      </a>
+      <a
+        href="https://www.linkedin.com/in/allan-julie-b535811b4/"
+        target="_blank"
+      >
+        <div class="linkedin">
+          <i class="fab fa-linkedin"></i>
+          <p>Linkedin</p>
+        </div>
+      </a>
     </div>
 
     <section class="conversation-elements">
@@ -85,8 +92,10 @@
       <div class="conversation"></div>
     </section>
 
+    <script src="./controllers/weatherController.js"></script>
+    <script src="./controllers/locationController.js"></script>
     <script src="./services/deleteConversation.js"></script>
-    <script src="./controllers/animateHTML.js"></script>
+    <script src="./controllers/html-templates/"></script>
     <script src="./index.js"></script>
   </body>
 </html>
