feat(greetings-by-time): greetings given following the time and more greetings options to speak

--- a/src/index.html
+++ b/src/index.html
@@ -82,14 +82,16 @@
         <label for="check">Save conversation?</label>
       </div>
 
-      <div class="tooltip-button">
-        <button class="talk" id="talk-btn" name="talk-btn">
-          <i class="fas fa-microphone-alt"></i>
-        </button>
-        <span class="tooltip-text">Click to talk</span>
-      </div>
-
       <div class="conversation"></div>
+
+      <div class="microphone-bar">
+        <div class="tooltip-button">
+          <button class="talk" id="talk-btn" name="talk-btn">
+            <i class="fas fa-microphone-alt"></i>
+          </button>
+          <span class="tooltip-text">Click to talk</span>
+        </div>
+      </div>
     </section>
 
     <script src="./controllers/weatherController.js"></script>
